--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
+    "node-sass": "^3.4.2",
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-sass": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
